--- a/dotnet-project-build-n-test/action.yml
+++ b/dotnet-project-build-n-test/action.yml
@@ -45,3 +45,16 @@ runs:
       name: dotnet test
       working-directory: ${{ inputs.testsDirectory }}
       shell: bash
+    - name: upload build artifact
+      uses: actions/upload-artifact@v2
+      if: ${{always()}}
+      with:
+        name: 'Test Run'
+        path: ${{github.workspace}}/${{env.file_name}}
+    - name: comment PR
+      uses: machine-learning-apps/pr-comment@master
+      if: ${{ github.event_name == 'pull_request' }}
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        path: ${{env.file_name}}
